--- a/index.html
+++ b/index.html
@@ -3,128 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Currículum</title>
+    <title>Tu Nombre - CV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="background-animation"></div>
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Mi Currículum</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#intro">Introducción</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">Acerca de mí</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Habilidades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Experiencia</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#education">Educación</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <main class="container mt-5 pt-5">
-        <section id="intro" class="my-5 fade-in">
-            <h1 class="display-4">Bienvenido a mi Currículum</h1>
-            <p class="lead">Desarrollador web y experto en ciberseguridad</p>
-        </section>
-
-        <section id="about" class="my-5 fade-in">
-            <h2>Acerca de mí</h2>
-            <p>Soy un apasionado desarrollador web con experiencia en ciberseguridad. Me encanta crear soluciones innovadoras y seguras.</p>
-        </section>
-
-        <section id="skills" class="my-5 fade-in">
-            <h2>Habilidades</h2>
-            <div class="skill-bar">
-                <h5>Python</h5>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Tu Nombre</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#sobre-mi">Sobre Mí</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#experiencia">Experiencia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#habilidades">Habilidades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contacto">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="skill-bar">
-                <h5>JavaScript</h5>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
-                </div>
-            </div>
-            <div class="skill-bar">
-                <h5>Ciberseguridad</h5>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-                </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="hero" class="d-flex align-items-center justify-content-center text-center text-white">
+            <div class="container">
+                <h1 class="display-1 fw-bold mb-3">Tu Nombre</h1>
+                <p class="lead mb-4">Desarrollador Web Full Stack</p>
+                <a href="#" class="btn btn-light btn-lg">Descargar CV</a>
             </div>
         </section>
 
-        <section id="experience" class="my-5 fade-in">
-            <h2>Experiencia</h2>
-            <div class="card my-3">
-                <div class="card-body">
-                    <h5 class="card-title">Desarrollador Web Senior</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Empresa XYZ | 2018 - Presente</h6>
-                    <p class="card-text">Desarrollo de aplicaciones web seguras y escalables utilizando las últimas tecnologías.</p>
-                </div>
+        <section id="sobre-mi" class="py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Sobre Mí</h2>
+                <p class="lead text-center">
+                    Soy un desarrollador web apasionado con experiencia en la creación de aplicaciones web modernas y escalables. 
+                    Me especializo en JavaScript, HTML5, CSS3 y frameworks populares, y siempre estoy buscando aprender nuevas tecnologías 
+                    para mejorar mis habilidades y ofrecer soluciones innovadoras.
+                </p>
             </div>
-            <div class="card my-3">
-                <div class="card-body">
-                    <h5 class="card-title">Analista de Ciberseguridad</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Empresa ABC | 2015 - 2018</h6>
-                    <p class="card-text">Implementación de medidas de seguridad y análisis de vulnerabilidades en sistemas críticos.</p>
+        </section>
+
+        <section id="experiencia" class="py-5 bg-light">
+            <div class="container">
+                <h2 class="text-center mb-4">Experiencia Laboral</h2>
+                <div class="row" id="experiencia-container">
+                    <!-- Las tarjetas de experiencia se generarán dinámicamente con JavaScript -->
                 </div>
             </div>
         </section>
 
-        <section id="education" class="my-5 fade-in">
-            <h2>Educación</h2>
-            <div class="card my-3">
-                <div class="card-body">
-                    <h5 class="card-title">Máster en Ciberseguridad</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Universidad Tech | 2014 - 2015</h6>
-                </div>
-            </div>
-            <div class="card my-3">
-                <div class="card-body">
-                    <h5 class="card-title">Grado en Ingeniería Informática</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Universidad Tech | 2010 - 2014</h6>
+        <section id="habilidades" class="py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Habilidades Técnicas</h2>
+                <div class="d-flex flex-wrap justify-content-center" id="habilidades-container">
+                    <!-- Las habilidades se generarán dinámicamente con JavaScript -->
                 </div>
             </div>
         </section>
 
-        <section id="contact" class="my-5 fade-in">
-            <h2>Contacto</h2>
-            <form id="contact-form">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" required>
-                </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Mensaje</label>
-                    <textarea class="form-control" id="message" rows="3" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            </form>
-            <div class="mt-3">
-                <a href="https://linkedin.com" target="_blank" class="btn btn-outline-primary me-2">LinkedIn</a>
-                <a href="https://github.com" target="_blank" class="btn btn-outline-primary">GitHub</a>
+        <section id="contacto" class="py-5 bg-light">
+            <div class="container">
+                <h2 class="text-center mb-4">Contáctame</h2>
+                <form id="contactForm" class="max-width-500 mx-auto">
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="mensaje" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Enviar Mensaje</button>
+                </form>
             </div>
         </section>
     </main>
 
-    <footer class="bg-dark text-white text-center py-3 mt-5">
-        <p>&copy; 2023 Mi Currículum. Todos los derechos reservados.</p>
+    <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+            <p>&copy; 2023 Tu Nombre. Todos los derechos reservados.</p>
+            <div class="mt-3">
+                <a href="#" class="text-white me-3"><i class="bi bi-github"></i></a>
+                <a href="#" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
+                <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"></script>
     <script src="script.js"></script>
 </body>
 </html>
