--- a/index.html
+++ b/index.html
@@ -1,113 +1,184 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Nombre - CV</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Mi Currículum Vitae</title>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
-    <header class="fixed-top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">Tu Nombre</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#sobre-mi">Sobre Mí</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#experiencia">Experiencia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#habilidades">Habilidades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contacto">Contacto</a>
-                        </li>
-                    </ul>
+    <header class="main-header py-5">
+        <div class="container">
+            <h1 class="text-white mb-4 wow fadeInDown">Bienvenidos#</h1>
+            <div class="card wow fadeInUp">
+                <div class="card-body">
+                    <h2 class="card-title">Starking De leon Beltre.</h2>
+                    <p class="card-text">Analista de seguridad y auditorias de ciberseguridad</p>
+                    <button id="downloadCV" class="btn btn-primary">Descargar CV</button>
+                    
                 </div>
             </div>
-        </nav>
+        </div>
     </header>
 
-    <main>
-        <section id="hero" class="d-flex align-items-center justify-content-center text-center text-white">
-            <div class="container">
-                <h1 class="display-1 fw-bold mb-3">Tu Nombre</h1>
-                <p class="lead mb-4">Desarrollador Web Full Stack</p>
-                <a href="#" class="btn btn-light btn-lg">Descargar CV</a>
-            </div>
-        </section>
-
-        <section id="sobre-mi" class="py-5">
-            <div class="container">
-                <h2 class="text-center mb-4">Sobre Mí</h2>
-                <p class="lead text-center">
-                    Soy un desarrollador web apasionado con experiencia en la creación de aplicaciones web modernas y escalables. 
-                    Me especializo en JavaScript, HTML5, CSS3 y frameworks populares, y siempre estoy buscando aprender nuevas tecnologías 
-                    para mejorar mis habilidades y ofrecer soluciones innovadoras.
-                </p>
-            </div>
-        </section>
-
-        <section id="experiencia" class="py-5 bg-light">
-            <div class="container">
-                <h2 class="text-center mb-4">Experiencia Laboral</h2>
-                <div class="row" id="experiencia-container">
-                    <!-- Las tarjetas de experiencia se generarán dinámicamente con JavaScript -->
+    <section class="skills py-5">
+        <div class="container">
+            <h2 class="text-center mb-5 wow fadeInUp">Algunas de mis Habilidades</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4 wow fadeInLeft" data-wow-delay="0.2s">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h3 class="card-title">Certificaciones</h3>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-certificate me-2"></i>SWITCHING, ROUTING AND WIRELESS
+                                    FUNDAMENTALS CCNA 2 by Cisco
+                                </li>
+                                <li><i class="fas fa-certificate me-2"></i>SERVICIOS AUXILIARES EN
+                                    CIBERSEGURIDAD</li>
+                                <li><i class="fas fa-certificate me-2"></i>CompTIA Pentest+ Learning Path</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h3 class="card-title">Habilidades Técnicas</h3>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-code me-2"></i>Python, C#, Bash</li>
+                                <li><i class="fas fa-database me-2"></i>MongoDB, SQL</li>
+                                <li><i class="fas fa-mobile-alt me-2"></i>Diseño Responsivo</li>
+                                <li><i class="fas fa-code-branch me-2"></i>Git, GitHub</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4 wow fadeInRight" data-wow-delay="0.6s">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h3 class="card-title">Habilidades Blandas</h3>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-users me-2"></i>Trabajo en equipo</li>
+                                <li><i class="fas fa-comments me-2"></i>Comunicación efectiva</li>
+                                <li><i class="fas fa-lightbulb me-2"></i>Resolución de problemas</li>
+                                <li><i class="fas fa-tasks me-2"></i>Gestión del tiempo</li>
+                                <li><i class="fas fa-book-reader me-2"></i>Aprendizaje continuo</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="habilidades" class="py-5">
-            <div class="container">
-                <h2 class="text-center mb-4">Habilidades Técnicas</h2>
-                <div class="d-flex flex-wrap justify-content-center" id="habilidades-container">
-                    <!-- Las habilidades se generarán dinámicamente con JavaScript -->
+    <section class="about-me py-5">
+        <div class="container">
+            <h2 class="text-center mb-4 wow fadeInUp">Acerca de mí</h2>
+            <div class="row align-items-center">
+                <div class="col-md-6 wow fadeInLeft">
+                    <img src="/image.jpg" alt="Mi foto" class="img-fluid rounded-circle shadow-sm">
+                </div>
+                <div class="col-md-6 wow fadeInRight">
+                    <p class="lead">Soy un desarrollador y analista apasionado, especializado en ciberseguridad y auditorías tecnológicas, con experiencia en la creación de herramientas para auditoria de sistemas locales y servicios web. 
+                        <br>Estoy comprometido con el aprendizaje continuo, aportando soluciones innovadoras que fortalezcan la seguridad y funcionalidad de los sistemas tecnológicos. Mi objetivo es seguir perfeccionándome como profesional en ingeniería de sistemas y contribuir a proyectos que impacten positivamente en la industria y la sociedad.
+                        <br>Estoy constantemente aprendiendo y manteniéndome al día con las últimas tendencias y tecnologías
+                        en el mundo del desarrollo web y de aplicaciones nativas. Mi pasión por la programación y mi dedicación a la excelencia me
+                        impulsan a buscar siempre las mejores soluciones para los desafíos técnicos que enfrento.</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="contacto" class="py-5 bg-light">
-            <div class="container">
-                <h2 class="text-center mb-4">Contáctame</h2>
-                <form id="contactForm" class="max-width-500 mx-auto">
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" required>
+    <section class="experience py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5 wow fadeInUp">Experiencia Laboral y Certificaciones</h2>
+            <div class="timeline">
+                <div class="timeline-item wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
                     </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" required>
+                    <div class="timeline-content">
+                        <h3 class="timeline-title">Gerente de TICs</h3>
+                        <p class="timeline-info">Ayuntamiento Municipal Barahona. | 2022 - Presente</p>
+                        <p>Lideré el desarrollo de varias mejoras y funcionalidades en la aplicación web de transparencia y lider en la gestión de normativas de seguridad de la informacon.</p>
                     </div>
-                    <div class="mb-3">
-                        <label for="mensaje" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+                </div>
+                <div class="timeline-item wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Enviar Mensaje</button>
-                </form>
+                    <div class="timeline-content">
+                        <h3 class="timeline-title">Licenciado en informatica</h3>
+                        <p class="timeline-info">UCATEBA. | 2017 - 2021</p>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="timeline-item wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h3 class="timeline-title">Tecnico en CCNA</h3>
+                        <p class="timeline-info">Infotep | 2024</p>
+                        <p></p>
+                    </div>
+                </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
-    <footer class="bg-dark text-white py-4">
-        <div class="container text-center">
-            <p>&copy; 2023 Tu Nombre. Todos los derechos reservados.</p>
-            <div class="mt-3">
-                <a href="#" class="text-white me-3"><i class="bi bi-github"></i></a>
-                <a href="#" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
+    <section class="contact py-5">
+        <div class="container">
+            <h2 class="text-center mb-4 wow fadeInUp">Comunícate conmigo</h2>
+            <form id="contactForm" class="wow fadeInUp" data-wow-delay="0.2s">
+                <div class="row mb-4">
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <div class="form-outline">
+                            <input type="text" id="name" class="form-control" required />
+                            <label class="form-label" for="name">Nombre</label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-outline">
+                            <input type="email" id="email" class="form-control" required />
+                            <label class="form-label" for="email">Correo electrónico</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-outline mb-4">
+                    <textarea class="form-control" id="message" rows="4" required></textarea>
+                    <label class="form-label" for="message">Mensaje</label>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block mb-4">Enviar</button>
+            </form>
+        </div>
+    </section>
+
+    <footer class="bg-dark text-center text-white py-4">
+        <div class="container">
+            <p>&copy; 2023 StarkingDB. Todos los derechos reservados.</p>
+            <div class="social-icons mt-3">
+                <a href="#!" class="me-4 text-white"><i class="fab fa-facebook-f"></i></a>
+                <a href="#!" class="me-4 text-white"><i class="fab fa-twitter"></i></a>
+                <a href="#!" class="me-4 text-white"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#!" class="me-4 text-white"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"></script>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
+    <!-- WOW.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
