--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
     </section>
 
-    <section class="contact py-5">
+    <section class="contact py-5" action="https://formsubmit.co/your@email.com" method="POST">
         <div class="container">
             <h2 class="text-center mb-4 wow fadeInUp">Comunícate conmigo</h2>
             <form id="contactForm" class="wow fadeInUp" data-wow-delay="0.2s">
@@ -148,7 +148,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-outline">
-                            <input type="email" id="email" class="form-control" required />
+                            <input type="email" id="email" name="email" class="form-control" required />
                             <label class="form-label" for="email">Correo electrónico</label>
                         </div>
                     </div>
