--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
         </div>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+   (function() {
+       emailjs.init("service_dyv0927"); // Reemplaza con tu User ID de EmailJS
+   })();
+</script>
+
     <footer class="bg-dark text-center text-white py-4">
         <div class="container">
             <p>&copy; 2023 StarkingDB. Todos los derechos reservados.</p>
