--- a/index.html
+++ b/index.html
@@ -169,6 +169,34 @@
    })();
 </script>
 
+    <script>
+document.getElementById("contactForm").addEventListener("submit", function(e) {
+    e.preventDefault(); // Previene el comportamiento por defecto del formulario
+
+    // Obtén los valores del formulario
+    const name = document.getElementById("name").value;
+    const email = document.getElementById("email").value;
+    const message = document.getElementById("message").value;
+
+    // Envía los datos usando EmailJS
+    emailjs.send("service_dyv0927", "template_rom6vc8", {
+        from_name: name,         // Asigna el nombre al placeholder {{from_name}}
+        from_email: email,       // Incluye el correo del remitente (opcional, pero recomendable)
+        message: message         // Asigna el mensaje al placeholder {{message}}
+    })
+    .then(function(response) {
+        // Éxito: muestra un mensaje de confirmación
+        alert("Mensaje enviado con éxito.");
+        console.log("SUCCESS!", response.status, response.text);
+        document.getElementById("contactForm").reset(); // Limpia el formulario después de enviarlo
+    }, function(error) {
+        // Error: muestra un mensaje de error
+        alert("Error al enviar el mensaje. Por favor, intenta de nuevo.");
+        console.log("FAILED...", error);
+    });
+});
+</script>
+
     <footer class="bg-dark text-center text-white py-4">
         <div class="container">
             <p>&copy; 2023 StarkingDB. Todos los derechos reservados.</p>
