--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <h2 class="text-center mb-4 wow fadeInUp">Comunícate conmigo</h2>
                 <form 
                     id="contactForm" 
-                    action="https://formsubmit.co/TU_CORREO@EMAIL.COM" 
+                    action="https://formsubmit.co/starkingdb@gmail.com" 
                     method="POST">
                     <div class="row mb-4">
                         <div class="col-md-6 mb-4 mb-md-0">
