--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                     id="contactForm" 
                     action="https://formsubmit.co/starkingdb@gmail.com" 
                     method="POST">
+                    
+                    <!-- Campo oculto para deshabilitar CAPTCHA -->
+                    <input type="hidden" name="_captcha" value="false">
+                
                     <div class="row mb-4">
                         <div class="col-md-6 mb-4 mb-md-0">
                             <div class="form-outline">
@@ -162,6 +166,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-block mb-4">Enviar</button>
                 </form>
+
         </div>
     </section>
     <footer class="bg-dark text-center text-white py-4">
